--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>This is the title of the webpage!</title>
-  </head>
-  <body>
-      <p>
-      This is an example paragraph. Anything in the <strong>body</strong>
-      tag will appear on the page, just like this <strong>p</strong>
-      tag and its contents.
-      </p>
-  </body>
-</html>
+<head>
+    <title> Vega Lite Visualization Assignment</title>
+    <script src="https://cdn.jsdelivr.net/npm/vega@5.16.1"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-lite@4.16.8"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.12.2"></script>
+</head>
+<body>
+    <div id="viz"></div>
+    <script type = "test/javascript">
+    var yourV1Spec = 
+    {
+  "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
+  "data": {"url": "https://jupyterhub.ischool.illinois.edu/jupyter/user/zainaba2/edit/building_inventory.csv"},
+  "mark": "bar",
+  "encoding": {
+    "x":{"field":"YEAR acquired","type":"quantitative","bin":true},
+    "y":{"aggregate":"count","type":"quantitative"},
+    "color":{"aggregate":"sum","field":"YearConstructed",
+    "Scale":{"type":"log"}}
+  }
+};
+vegaEmbed(#viz,yourV1Spec);
+    </script></body></html>
