--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.12.2"></script>
 </head>
 <body>
-    <div id="viz"></div>
-    <script type = "test/javascript">
+    <div id="vis"></div>
+    <script type = "text/javascript">
         var yourV1Spec = 
             {
             "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
@@ -22,7 +22,7 @@
                 }
           }
         };
-        vegaEmbed(#viz,yourV1Spec);
+        vegaEmbed(#vis,yourV1Spec);
     </script>
     </body>
 </html>
