--- a/index.html
+++ b/index.html
@@ -9,20 +9,29 @@
 <body>
     <div id="vis"></div>
     <script type = "text/javascript">
-        var yourV1Spec = 
-            {
-            "$schema": "https://vega.github.io/schema/vega-lite/v4.json",
-              "data": {"url":"https://uiuc-ischool-dataviz.github.io/spring2019online/week02/building_inventory.csv"},
-              "mark": "bar",
-              "encoding": {
-                "x":{"field":"YEAR acquired","type":"quantitative","bin":true},
-                "y":{"aggregate":"count","type":"quantitative"},
-                "color":{"aggregate":"sum","field":"YearConstructed",
-                "Scale":{"type":"log"}
-                }
-          }
-        };
-        vegaEmbed(#vis,yourV1Spec);
+        var yourVlSpec = {
+        $schema: 'https://vega.github.io/schema/vega-lite/v4.json',
+        description: 'A simple bar chart with embedded data.',
+        data: {
+          values: [
+            {a: 'A', b: 28},
+            {a: 'B', b: 55},
+            {a: 'C', b: 43},
+            {a: 'D', b: 91},
+            {a: 'E', b: 81},
+            {a: 'F', b: 53},
+            {a: 'G', b: 19},
+            {a: 'H', b: 87},
+            {a: 'I', b: 52}
+          ]
+        },
+        mark: 'bar',
+        encoding: {
+          x: {field: 'a', type: 'ordinal'},
+          y: {field: 'b', type: 'quantitative'}
+        }
+      };
+      vegaEmbed('#vis', yourVlSpec);
     </script>
-    </body>
+</body>
 </html>
