--- a/index.html
+++ b/index.html
@@ -13,22 +13,12 @@
         $schema: 'https://vega.github.io/schema/vega-lite/v4.json',
         description: 'A simple bar chart with embedded data.',
         data: {
-          values: [
-            {a: 'A', b: 28},
-            {a: 'B', b: 55},
-            {a: 'C', b: 43},
-            {a: 'D', b: 91},
-            {a: 'E', b: 81},
-            {a: 'F', b: 53},
-            {a: 'G', b: 19},
-            {a: 'H', b: 87},
-            {a: 'I', b: 52}
-          ]
+          url:'https://uiuc-ischool-dataviz.github.io/spring2019online/week02/building_inventory.csv'
         },
         mark: 'bar',
         encoding: {
-          x: {field: 'a', type: 'ordinal'},
-          y: {field: 'b', type: 'quantitative'}
+          x: {field: 'Year Acquired', type: 'quantitative'},
+          y: {field: 'Year Constructed', type: 'quantitative'}
         }
       };
       vegaEmbed('#vis', yourVlSpec);
