--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.12.2"></script>
 </head>
 <body>
+    <h2>Data Vizualisation Assignment - Vegalite Plot Embedding</h2>
+    <p> The plot below is a bar plot between the fields "Year Acquired" and "Year Constructed" from the building inventory data</p>
+    <h3> Year Acquired vs Year constructed</h3>
     <div id="vis"></div>
     <script type = "text/javascript">
         var yourVlSpec = {
@@ -17,7 +20,7 @@
         },
         mark: 'bar',
         encoding: {
-          x: {field: 'Year Acquired', type: 'quantitative'},
+          x: {field: 'Year Acquired', type: 'quantitative',bin:true},
           y: {field: 'Year Constructed', type: 'quantitative'}
         }
       };
